fix vertical alignment

--- a/src/Components/ItemList/styles.css
+++ b/src/Components/ItemList/styles.css
@@ -8,6 +8,7 @@
     border: 1px solid black;
     text-align: left;
     /* border: 1xp solid red; */
+    vertical-align: baseline;
 
 
 }
